fixes element spacing in header, update coin modal fades in, fixes stacking context issue when opacity is 0 in collapsibles using overflow hidden

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -14,7 +14,13 @@
 
   background: red;
 }
-
 .AppTitle {
-  cursor: pointer;
+  padding: 0 20px;
+
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+
+  background: red;
+  cursor: default;
 }
